# event-detection-premises

./: Dockerfile  LICENSE  Makefile  README.md  config_glr_voting.yaml  config_gof_voting.yaml  config_hart.yaml  pyproject.toml  requirements.txt
docker/detector/: docker-compose.yml
docker/services/grafana/dashboards/: default.yaml
docker/services/grafana/dashboards/detector/: eventDetection.json
event_detection/: __main__.py
event_detection/detectors/: __init__.py  detector.py  event.py  glr_cum_vote_detector.py  glr_detector.py  glr_maxima_detector.py  glr_vote_detector.py  gof_detector.py  gof_vote_detector.py  hart_detector.py  stats.py
event_detection/plotting/: events.py
event_detection/processor/: __init__.py  db_event_processor.py  event_processor.py  mqtt_event_processor.py
event_detection/service/: __init__.py  detector_service.py  service.py
event_detection/sources/: __init__.py  mqtt_source.py
notebooks/: event_algorithms.ipynb
tests/: conftest.py  test_detectors.py  test_stats.py
